[tool.poetry]
name = "cmdb_client"
version = "0.1.0"
description = ""
authors = ["mxback <mxback@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.8.0"
redis = "^3.5.3"
pyecharts = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
